--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="style/login.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+  <link rel="icon" href="assets/images/logo.png" type="image/icon">
 </head>
 <body>
 <nav>
@@ -52,16 +53,7 @@
     </div>
 
     <div class="login-modal">
-      <div class="login-options">
-        <div class="google-login">
-          <img src="assets/images/icons/google-icon.png" alt="Google">
-          <span>Login with Google</span>
-        </div>
-      </div>
 
-      <div class="divider">
-        <span>or with continue with email</span>
-      </div>
 
       <div class="input-group">
         <div class="input-field">
